--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon"
   },
   "dependencies": {
     "apollo-server": "^2.4.8",
     "graphql": "^14.2.1",
-    "mongoose": "^5.5.3"
+    "moment": "^2.24.0",
+    "mongoose": "^5.5.3",
+    "nodemon": "^1.19.0"
   }
 }
