--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "graphql": "^14.2.1",
     "moment": "^2.24.0",
     "mongoose": "^5.5.3",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.0",
+    "pg": "^7.10.0",
+    "pg-format": "^1.0.4"
   }
 }
