--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "apollo-server": "^2.4.8",
+    "axios": "^0.18.0",
     "graphql": "^14.2.1",
     "moment": "^2.24.0",
     "mongoose": "^5.5.3",
